More spacing fixes

--- a/css/components/choice.css
+++ b/css/components/choice.css
@@ -57,6 +57,7 @@
 [data-component~="choice"] nav ul a {
     padding: 5px 7px;
     margin: 0px 2px;
+    margin-bottom: 2px;
     display: block;
     text-decoration: none;
     font-size: var(--font-size);
